--- a/badabing.html
+++ b/badabing.html
@@ -18,6 +18,6 @@
   
   <h1>Bada Bing! Daily Wallpaper Changer</h1>
   <button id="reload">&#x27F3; Manually refresh wallpaper</button>
-  <script src="badabing.js"></script>
+  <script type="module" src="badabing.js"></script>
 </body>
 </html>
